Add some clients

--- a/index.html
+++ b/index.html
@@ -73,9 +73,16 @@
       line-height: 32px;
     }
 
-    p{
+    p,
+    ul{
       font-size: 14px;
       line-height: 19px;
+    }
+
+    .about,
+    .work
+    {
+      margin: 10px;
     }
   </style>
 
@@ -84,19 +91,36 @@
 
 
   <h1>
-    scott blissett
+    Scott Blissett
   </h1>
-  <p>
-    digital designer
-  </p>
-  <p>
-    emailabsentees at gmail.com
-  </p>
-  <p>
-    <a href="http://absentees.tumblr.com" target="_blank">blog</a>
-  </p>
-
-
+  <div class="about">
+    <p>
+      Currently working: Senior Digital Designer @ <a href="http://presentcompany.co" target="_blank">Present Company</a>
+    </p>
+  </div>
+  <div class="work">
+    <p>
+      Through my work at Present Company i've worked with:
+    </p>
+    <ul>
+      <li>Red Bull - Cape Fear, Red Bull Music Academy, Red Bull Racing Australia </li>
+      <li>Qantas - Qantas Media Room</li>
+      <li>Casella Family Brands - [yellow tail], Brand's Laira, Peter Lehmann</li>
+      <li>Vodafone - Vodafone Media Room</li>
+      <li>Semi Permanent</li>
+      <li>Bacardi - Fuego Revoutions</li>
+      <li>Crafted</li>
+      <li>QSRH - Oporto, Red Rooster, Chicken Treat</li>
+    </ul>
+  </div>
+  <div class="contact">
+    <p>
+      emailabsentees at gmail.com
+    </p>
+    <p>
+      <a href="http://twitter.com/absentees" target="_blank">twitter</a>
+    </p>
+  </div>
 
 
 
