--- a/index.html
+++ b/index.html
@@ -68,6 +68,15 @@
     width: 75%;
     }
 
+    a {
+      color: black;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
     h1{
       font-size: 14px;
       line-height: 32px;
@@ -103,14 +112,14 @@
       Through my work at Present Company i've worked with:
     </p>
     <ul>
-      <li>Red Bull - Cape Fear, Red Bull Music Academy, Red Bull Racing Australia </li>
-      <li>Qantas - Qantas Media Room</li>
-      <li>Casella Family Brands - [yellow tail], Brand's Laira, Peter Lehmann</li>
-      <li>Vodafone - Vodafone Media Room</li>
-      <li>Semi Permanent</li>
-      <li>Bacardi - Fuego Revoutions</li>
-      <li>Crafted</li>
-      <li>QSRH - Oporto, Red Rooster, Chicken Treat</li>
+      <a href="#"><li>Red Bull - Cape Fear, Red Bull Music Academy, Red Bull Racing Australia </li></a>
+      <a href="#"><li>Qantas - Qantas Media Room</li></a>
+      <a href="#"><li>Casella Family Brands - [yellow tail], Brand's Laira, Peter Lehmann</li></a>
+      <a href="#"><li>Vodafone - Vodafone Media Room</li></a>
+      <a href="#"><li>Semi Permanent</li></a>
+      <a href="#"><li>Bacardi - Fuego Revoutions</li></a>
+      <a href="#"><li>Crafted</li></a>
+      <a href="#"><li>QSRH - Oporto, Red Rooster, Chicken Treat</li></a>
     </ul>
   </div>
   <div class="contact">
