--- a/index.html
+++ b/index.html
@@ -78,60 +78,157 @@
     }
 
     h1{
-      font-size: 14px;
-      line-height: 32px;
+      font-size: 13px;
     }
 
     p,
     ul{
-      font-size: 14px;
+      font-size: 13px;
       line-height: 19px;
     }
 
-    .about,
     .work
     {
-      margin: 10px;
+      margin: 20px 20px;
+
+    }
+
+    .work p:first-child {
+      margin-bottom: 5px;
+    }
+
+    .contact {
+      margin-top: 20px;
+    }
+
+    .left, .right {
+      float: left;
+      width: 50%;
+    }
+
+    .left li a {
+      opacity: 0.7;
+    }
+
+    .right {
+      text-align: center;
+    }
+
+    .right li {
+      overflow: hidden;
+      height: 0;
+      opacity: 0;
+    }
+
+    .right li.active {
+      height: auto;
+      opacity: 1;
+    }
+
+    .right img {
+      max-width: 100%;
+      max-height: 400px;
     }
   </style>
 
 </head>
 <body>
 
-
-  <h1>
-    Scott Blissett
-  </h1>
-  <div class="about">
-    <p>
-      Currently working: Senior Digital Designer @ <a href="http://presentcompany.co" target="_blank">Present Company</a>
-    </p>
+  <div class="left">
+    <h1>
+      Scott Blissett
+    </h1>
+    <div class="about">
+      <p>
+        Currently working: Senior Digital Designer @ <a href="http://presentcompany.co" target="_blank">Present Company</a>
+      </p>
+    </div>
+    <div class="work">
+      <p>
+        Whilst at Present Company i've worked with:
+      </p>
+      <ul>
+        <li>Red Bull - <a href="#" data-name="capefear">Cape Fear</a>, <a href="#" data-name="rbma">Red Bull Music Academy Weekender Sydney</a>, <a href="#" data-name="rbra">Red Bull Racing Australia</a></li>
+        <li>Casella Family Brands - <a href="#" data-name="cfb">Casella Family Brands</a>, <a href="#" data-name="yt">[yellow tail]</a>, <a href="#" data-name="pl">Peter Lehmann</a>, <a href="#" data-name="morriswines">Morris Wines</a></li>
+        <li>Vodafone - <a href="#" data-name="vfmr">Vodafone Media Room</a></li>
+        <li>Semi Permanent - <a href="#" data-name="sp">Semi Permanent</a></li>
+        <li>Bacardi - <a href="#" data-name="bfr">Fuego Revoutions</a></li>
+        <li>Crafted - <a href="#" data-name="cr">Capitol Residences</a>, <a href="#" data-name="crafted">Crafted</a></li>
+        <li>QSRH - <a href="#" data-name="oporto">Oporto</a>, <a href="#" data-namee="rr">Red Rooster</a></li>
+        <li><a href="#" data-name="oxygen">Oxygen</a></li>
+        <li>Unibet - <a href="" data-name="iameuro">I Am Euro</a></li>
+        <li>Office of Environment and Heritage - <a href="#" data-name="yac">National Parks Blog</a>, <a href="#" data-name="figureeight">Figure Eight Pools</a></li>
+        <li>RMIT - <a href="#" data-name="studentportal">Student Portal</a></li>
+      </ul>
+    </div>
+    <div class="contact">
+      <p>
+        emailabsentees at gmail.com
+      </p>
+      <p>
+        <a href="http://twitter.com/absentees" target="_blank">twitter</a>
+      </p>
+    </div>
   </div>
-  <div class="work">
-    <p>
-      Through my work at Present Company i've worked with:
-    </p>
+
+  <div class="right">
     <ul>
-      <a href="#"><li>Red Bull - Cape Fear, Red Bull Music Academy, Red Bull Racing Australia </li></a>
-      <a href="#"><li>Qantas - Qantas Media Room</li></a>
-      <a href="#"><li>Casella Family Brands - [yellow tail], Brand's Laira, Peter Lehmann</li></a>
-      <a href="#"><li>Vodafone - Vodafone Media Room</li></a>
-      <a href="#"><li>Semi Permanent</li></a>
-      <a href="#"><li>Bacardi - Fuego Revoutions</li></a>
-      <a href="#"><li>Crafted</li></a>
-      <a href="#"><li>QSRH - Oporto, Red Rooster, Chicken Treat</li></a>
+      <li class="rbma">
+        <img src="./img/rbma.jpg" alt="Red Bull Music Academy Weekender">
+        <p>Build</p>
+      </li>
+      <li class="capefear">
+        <img src="http://unsplash.it/1200x800" alt="">
+        <p>something</p>
+      </li>
+      <li>
+        <img src="http://unsplash.it/1200x800" alt="">
+        <p>something</p>
+      </li>
+      <li>
+        <img src="http://unsplash.it/1200x800" alt="">
+        <p>something</p>
+      </li>
+      <li>
+        <img src="http://unsplash.it/1200x800" alt="">
+        <p>something</p>
+      </li>
+      <li>
+        <img src="http://unsplash.it/1200x800" alt="">
+        <p>something</p>
+      </li>
+      <li>
+        <img src="http://unsplash.it/1200x800" alt="">
+        <p>something</p>
+      </li>
+      <li>
+        <img src="http://unsplash.it/1200x800" alt="">
+        <p>something</p>
+      </li>
+      <li>
+        <img src="http://unsplash.it/1200x800" alt="">
+        <p>something</p>
+      </li>
     </ul>
   </div>
-  <div class="contact">
-    <p>
-      emailabsentees at gmail.com
-    </p>
-    <p>
-      <a href="http://twitter.com/absentees" target="_blank">twitter</a>
-    </p>
-  </div>
 
 
+<!-- Javascripts -->
+<script src="./jquery-3.1.0.min.js"></script>
+
+<script>
+  $(document).ready(function(){
+    var name = "";
+
+    $('.work a').click(function(){
+      if (name) {
+        $(name).toggleClass('active');
+      }
+      name = '.' + $(this).data('name');
+      $(name).toggleClass('active');
+    });
+  });
+</script>
 
 <script>
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
